--- a/index.html
+++ b/index.html
@@ -3,6 +3,24 @@
   <head>
     <meta charset="utf-8">
     <title>wms_front</title>
+    <link rel="stylesheet" href="https://unpkg.com/element-ui/lib/theme-chalk/index.css">
+    <script src="https://unpkg.com/element-ui/lib/index.js"></script>
+    <style type="text/css">
+      *{ margin: 0; padding: 0}
+      html{
+        height: 100%;
+        width: 100%;
+      }
+      body{
+        height: 100%;
+        width: 100%;
+      }
+      @keyframes resizeanim { from { opacity: 0; } to { opacity: 0; } } 
+      .resize-triggers { animation: 1ms resizeanim; visibility: hidden; opacity: 0; }
+      .resize-triggers, .resize-triggers > div, .contract-trigger:before { content: " "; display: block; position: absolute; top: 0; left: 0; height: 100%; width: 100%; overflow: hidden; z-index: -1 }
+      .resize-triggers > div { background: #eee; overflow: auto; }
+      .contract-trigger:before { width: 200%; height: 200%; }
+    </style>
   </head>
   <body>
     <div id="app"></div>
