--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>wms_front</title>
-    <link rel="stylesheet" href="https://unpkg.com/element-ui/lib/theme-chalk/index.css">
-    <script src="https://unpkg.com/element-ui@2.0.9/lib/index.js"></script>
+    <link rel="stylesheet" href="https://unpkg.com/element-ui@2.0.11/lib/theme-chalk/index.css">
+    <script src="http://unpkg.com/element-ui@2.0.11/lib/index.js"></script>
     <style type="text/css">
       *{ margin: 0; padding: 0}
       html{
