--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>wms_front</title>
+    <title>vue+elmentui</title>
+    <link rel="icon" href="http://q2.qlogo.cn/headimg_dl?dst_uin=646785700&spec=40">
     <link rel="stylesheet" href="https://unpkg.com/element-ui@2.0.11/lib/theme-chalk/index.css">
     <script src="http://unpkg.com/element-ui@2.0.11/lib/index.js"></script>
     <style type="text/css">
